app/hw3/main.css
/* Hint: use relative measurements you'll find them useful! */
/* I may have removed a selector or two */

@import url("https://fonts.googleapis.com/css?family=Monoton");  /* Set this for Monton a Google Font ...figure out their syntax */

* {
    box-sizing: border-box;
}

body {
    /* still have problems in this part */
    background-image: url("./background.png");
    background-repeat: no-repeat;

    background-attachment: fixed;
    background-size: cover;
}

main {
    margin: auto;
    width: 50%;
    background-color: #FFF;
    border-width: 3rem;
    border-style: solid;
    border-image: url("./border.gif") repeat;
    border-image-slice: 75 75;
}
header {

    font-size: 3rem;
    text-transform: uppercase;
}

.logo {
    background-color: rgb(253,79,194);
    border-radius: 90%;
    padding: 9px 16px;
    box-shadow: 1px 3px 10px black;
    font-family: "Monoton", cursive;
    font-weight: 500;
    text-decoration: none;
    color: #000;
}

.fun {
    font-family: "Courier",serif;
    color: #FFF;
    -webkit-text-stroke-width: 0.5px;
    -webkit-text-stroke-color: #F00;
    text-shadow: 1px 1px 2px #F00;
    margin-top: 1rem;
}

section {
    /* color rgb(243,234,95) is used */
    background: rgb(253,79,194);
    display: flex;
    flex-direction: column-reverse;
    text-align: center;
    color: white;
    margin: 1rem 0 1rem 0;
}

#zap {
    background-color: rgb(243,234,95);
    font-size: 2rem;
    text-shadow: 0px 1px 2px #000;
    border-style: double;
    border-color: #FFF;
    border-width: 0.1em;
    border-radius: 0.25rem;
}

#zap > h3 {
    margin: .75rem 0;
}
section > div {
    /* font is 'Comic Sans MS, text is automatically adjusted to lowercase do not mod the HTML */
    font-family: "Comic Sans MS", cursive, sans-serif;
    font-size: 1.5rem;
    text-transform: lowercase;
    color: #FFF;
    padding: .70em 0;
}
section > div:nth-child(odd) {
    /* ANastNthChildSelectorToWrite means what it says it isn't an indetifier */
    /* background color is  rgb(192,77,249) */
    background: rgb(192,77,249);

}
section > div:nth-child(even) {
    /* ANastNthChildSelectorToWrite means what it says it isn't an indetifier */
    /* background color is  rgb(43,209,252) */
    background: rgb(43,209,252);
}
section > div:nth-child(3):after {
    /* gave you the nth child after selector for free to inspire you */
    /* generated content in here ... a property can do that */
    content: " ♥♥♥";
    }



    /* some free rules for fun */
aside {
    background: rgb(255,63,63);
    color: white;
    border: 1rem solid black;
    border-radius: 1rem 3rem 1rem 3rem;
    /*border-top-right-radius: 3rem;
    border-bottom-left-radius: 3rem;*/
    /* rem units are your friend use them often */

    font-family: sans-serif;
    font-size: 2rem;

    text-align: center;
}

svg {
    width: 1em;
    height: 1em;
    fill: #FFF;
}
footer{
  background-color: rgb(253,79,194);
  margin: 0 -2rem -2rem -2rem;
  /*Need to stretch out somehow*/
  text-align: center;
}
footer > div > img{
  width: 30%;
}
footer > span{
  font-family: "Apple Chancery", cursive, serif;
  font-size: 1rem;
  margin-bottom: 2rem;
}
footer > div > img:hover + span{
  opacity: 1;
}
footer > div > span{
  position: absolute;
  display: inline-block;
  float: right;
  width: 6rem;
  height: 4rem;
  position: relative;
  bottom: 15rem;
  /* fade in fade out */
  opacity: 0;
  transition: opacity 2s;
  /* text box border */
  border-style: solid;
  border-width: 0.3rem;
  line-height: 3.4rem;
  border-color: black;
  background-color: white;
  border-radius: 1rem;
  text-align: center;
}
footer > div > span:before{
  display: inline-block;
  position: relative;
  right: 2.5rem;
  top: 0.5rem;
  content: "";
  width: 0;
  height: 0;
  border-top: 1rem solid transparent;
  border-right: 1rem solid black;
  border-bottom: 1rem solid transparent;
  border-left: 1rem solid transparent;
}

/* Oh no! The file has been truncated I guess you have to fill it in */

